--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,12 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "blob": "^0.1.0",
     "connected-react-router": "^6.8.0",
     "date-fns": "^2.14.0",
     "email-validator": "^2.0.4",
+    "file-saver": "^2.0.2",
+    "fs": "^0.0.1-security",
     "history": "^4.10.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
